Add maven profile that generates jlink archives
It's in a profile as it downloads jdks for all platforms
and then packages stuff